# mlopsforkme

./: .gitignore  README.rst  pyproject.toml
.github/workflows/: build.yml  test_pr.yml
mlopsforkme/alumnos/: BGD.py  abd.py  alby.py  amd.py  ct.py  dah.py  ejemplo.py  far.py  func_bgd.py  jc.py  juanse77.py  pagm.py  tanasuarez.py
tests/: test_jc.py
tests/alumnos/: test_abd.py  test_alby.py  test_amd.py  test_bgd.py  test_ct.py  test_dah.py  test_ejemplo.py  test_far.py  test_jc.py  test_juanse77.py  test_pagm.py  test_tsuarezm.py  tests.alumnos.test_dah.py
