[tool.poetry]
name = "mlopsforkme"
version = "0.1.0"
description = ""
authors = ["Alejandro Vidal <a@a.com>"]

[tool.poetry.dependencies]
python = ">=3.9"

[tool.poetry.dev-dependencies]
pytest-cov = "^4.0.0"
pytest = "^7.1.3"
black = "^22.10.0"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--doctest-modules"